# 2021-website

./: .gitignore  404.html  CNAME  README.md  _redirects  config.yml  index.html  infrastructure.md  netlify.toml  package.json  pyproject.toml  schedule-sync.py
.github/workflows/: update_schedule.yml
about/: index.html
assets/people/: _etags.yml
attend/: index.html
conduct/: index.html
culture/: index.html
data/News/: 2021-02-01-test.md  2021-02-16-intent-to-run.md  2021-03-17-dates-announcement.md  2021-04-18-tracks-announcement.md  2021-05-05-call-for-proposals.md  2021-05-13-sponsorships.md  2021-05-19-volunteer-roles.md  2021-06-12-tickets-on-sale.md  2021-06-22-tickets-on-sale.md  2021-07-11-program.md  2021-07-13-program.md  2021-07-21-event-volunteers.md  (+5 more)
devoops/: index.html
education/: index.html
frontend/: backstage.ts  index.js  index.scss  program.ts
models/: News.yml  Person.yml  Sponsor.yml
news/: index.html
program-sunday/: index.html
public/: 404.html  index.html
science-data-and-analytics/: index.html
shirt/: index.html
snakeoil-academy/: index.html
social/: index.html
speak/: index.html
speakers/: index.html
sponsor/: index.html
templates/: _base.html  _macros.html  _sponsor_macros.html  about.html  home.html  news_index.html  news_post.html  program-list.html  program-redirect.html  program-sunday.html  program.html  session.html  sponsors.html  track.html  tracks-index.html
tracks/: index.html
views/: about.yml  home.yml  program-all.yml  program.yml  speaker-pack.yml  sponsors.yml  track.yml  tracks.yml
(+377 files in other folders)
