[tool.poetry]
name = "pyconau-2021-website"
version = "0.2.0"
description = ""
authors = ["Leigh Brenecki <leigh@brenecki.id.au>", "Katie McLaughlin <katie@glasnt.com>"]

[tool.poetry.dependencies]
python = "^3.7"
statik = "^0.23.0"
sqlalchemy = {version = "*", extras = []}
"ruamel.yaml" = "^0.16.10"
parse = "^1.19.0"
bleach = "^3.3.0"
pillow = "^8.1.2"

[tool.poetry.dev-dependencies]
supervisor = "^4.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
